# MyPhotorealism

./: .gitignore  CMakeLists.txt  README.md  aggregate_main.cc  cornell_box.cc  main.cc  path_tracing.cc  path_tracing_diffuse.cc  path_tracing_mirror.cc  pinhole_main.cc  pinhole_sphere_main.cc  shadow_main.cc  use_glass.cc  use_ibl.cc  use_sky.cc  use_thinlens.cc
src/: Aggregate.hpp  Camera.hpp  Hit.hpp  Hitable.hpp  Image.hpp  Light.hpp  Material.hpp  Ray.hpp  Sky.hpp  Sphere.hpp  Util.hpp  Vec3.hpp  random.hpp
test/: CMakeLists.txt
test/testRay/: CMakeLists.txt  test.cpp
test/testSphere/: CMakeLists.txt  test.cpp
test/testVec3/: CMakeLists.txt  main.cpp  test.cpp
test_images/: test_aggregate.ppm  test_cam_sphere.ppm  test_shadow.ppm
